@@ -1,3 +1,5 @@
+* Added workaround for problems where string values were not always committed into parameters before the Execute button of the OpDialogue was clicked.
+
 0.32.0
 ------
 
